--- a/Projet 3 - Booki/index.html
+++ b/Projet 3 - Booki/index.html
@@ -343,22 +343,23 @@
             </div>
             <footer>
                 <div class="footer-content">
-                    <article class="footer-txt">
+                    <ul class="footer-txt">
                         <h3>A propos</h3>
-                        <p>Fonctionnement du site</p>
-                        <p>Conditions générales</p>
-                        <p>Données et confidentialité</p>
-                    </article>
-                    <article class="footer-txt">
+                        <li>Fonctionnement du site</li>
+                        <li>Conditions générales</li>
+                        <li>Données et confidentialité</li>
+                    </ul>
+                    <ul class="footer-txt">
                         <h3>Nos Hébergements</h3>
-                        <p>Charte qualité</p>
-                        <p>Proposer votre hôtel</p>
-                    </article>
-                    <article class="footer-txt">
+                        <li>Charte qualité</li>
+                        <li>Proposer votre hôtel</li>
+                    </ul>
+                    <ul class="footer-txt">
                         <h3>Assistance</h3>
-                        <p>Centre d'aide</p>
-                        <p>Nous contacter</p>
-                    </article>
+                        <li>Centre d'aide</li>
+                        <li>Nous contacter</li>
+                        <li></li>
+                    </ul>
                 </div>   
             </footer>
         </main>
