--- a/Projet 3 - Booki/index.html
+++ b/Projet 3 - Booki/index.html
@@ -43,6 +43,7 @@
                             <i class="fas fa-map-marker-alt"></i>
                         </label>
                         <input type="text" name="town" id="town" placeholder="Marseille, France">
+                        <button class="button-magnifying-glass"><i class="fa-solid fa-magnifying-glass"></i></button>
                         <input type="submit" value=" Rechercher" class="button">
                     </div>
                 </form>
