--- a/Projet 3 - Booki/index.html
+++ b/Projet 3 - Booki/index.html
@@ -224,7 +224,7 @@
                             </article>
                         </a>
                     </div>
-                    <h3>Afficher plus</h3>
+                    <h3 class="plus">Afficher plus</h3>
                 </section>
                 <section class="populaires">
                     <div class="populaires-title">
